--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -18,12 +18,19 @@ delete_branch:
     path: /branch/delete/{id}
     controller: App\Controller\ManagerBaseController::deleteBranch
 
+brunch_managers:
+    path: /branch/{name}
+    controller: App\Controller\GetDataController::getBranchManagers
 
 write_manager:
-    path: /write-manager
+    path: /write/manager
     controller: App\Controller\ManagerBaseController::writeManager
 
 edit_manager:
     path: /manager/edit/{id}
     controller: App\Controller\ManagerBaseController::editManager
+
+delete_manager:
+    path: /manager/delete/{id}
+    controller: App\Controller\ManagerBaseController::deleteManager
 
