--- a/config/packages/swiftmailer.yaml
+++ b/config/packages/swiftmailer.yaml
@@ -1,3 +1,6 @@
 swiftmailer:
-    url: '%env(MAILER_URL)%'
+    url: 'MAILER_URL=://smtp.gmail.com:465?encryption=ssl&username=symfony.local.test@gmail.com&password=23051994q'
     spool: { type: 'memory' }
+
+
+# smtp гугловской почты , снизить уровень безопасности
