--- a/.env
+++ b/.env
@@ -32,5 +32,5 @@ DATABASE_URL=mysql://viktor:23051994@127.0.0.1:3306/symfony_test
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=smtp://smtp.gmail.com:465?encryption=ssl&auth_mode=login&username=symfony.local.test@gmail.com&password=23051994q
 ###< symfony/swiftmailer-bundle ###
