--- a/config/doctrine/Manager.orm.yml
+++ b/config/doctrine/Manager.orm.yml
@@ -17,6 +17,9 @@ App\Entity\Manager:
         surname:
             type: string
             nullable: false
+        middleName:
+            type: string
+            nullable: false
         email:
             type: string
             nullable: true
