--- a/config/doctrine/Manager.orm.yml
+++ b/config/doctrine/Manager.orm.yml
@@ -11,6 +11,9 @@ App\Entity\Manager:
             generator:
                 strategy: AUTO
     fields:
+        code:
+            type: string
+            nullable: false
         name:
             type: string
             nullable: false
